minor spacing fix

--- a/frontend/src/components/styles/CountryFlag.css
+++ b/frontend/src/components/styles/CountryFlag.css
@@ -26,7 +26,7 @@
 .custom-options {
 	position: absolute;
 	display: none;
-	top: 100%;
+	top: 115%;
 	left: -22%;
 	right: 0;
 	transition: all 0.2s;
@@ -77,4 +77,8 @@
 	padding-left: 10px;
 	width: 100%;
 	border: none;
+}
+
+.ms-n1 {
+	margin-left: -0.375rem;
 }
